# ofox-feishu-bot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  commands.py  config.py  feishu_client.py  handlers.py  models.py  ofox_client.py  replies.py  report_rendering.py  reports.py  repository.py  worker.py
docs/: deploy_from_scratch.md
tests/: helpers.py  test_bot.py  test_config.py  test_data.py  test_feishu.py  test_worker.py
